--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>TESTING</title>
+    <title>Cards Layout Mockup</title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css" media="screen" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet"/>
 </head>
