commit to fix layout

--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
     
 <body>
     <div class="outer-cont">
-        <h1>A lot of cards</h1>
-        <div class="container">
-            <div class="card white border">
-                <div class="card-header">Card Header</div>
-                <div class="card-body">Card text card text card text card text card text</div>
+        <div class="inner-cont">
+            <h1>A lot of cards</h1>
+            <div class="card-container">
+                <div class="card white border">
+                    <div class="card-header">Card Header</div>
+                    <div class="card-body">Card text card text card text card text card text</div>
+                </div>
+                <div class="card black">
+                    <div class="card-header">Card Header</div>
+                    <div class="card-body">Card text card text card text card text card text</div>
+                </div>
+                <div class="card white border">
+                    <div class="card-header red-box">Card Header</div>
+                    <div class="card-body">Card text card text card text card text card text</div>
+                </div>        
+                <div class="card white border-blue">
+                    <div class="card-header red">Card Header</div>
+                    <div class="card-body">Card text card text card text card text card text</div>
+                </div>    
             </div>
-            <div class="card black">
-                <div class="card-header">Card Header</div>
-                <div class="card-body">Card text card text card text card text card text</div>
-            </div>
-            <div class="card white border">
-                <div class="card-header red-box">Card Header</div>
-                <div class="card-body">Card text card text card text card text card text</div>
-            </div>        
-            <div class="card white border-blue">
-                <div class="card-header red">Card Header</div>
-                <div class="card-body">Card text card text card text card text card text</div>
-            </div>    
         </div>
     </div>
 </body>
